-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.3
-
None
-
-
4375fff77 (dev), 0fde57231 (6.7), ed4bd942e (6.7.1), c7b1f2ca7 (tqtc/lts-6.5)
This is very specific use case. I have a model that is changing in time and I have current index of selected item (int) from C++ class. I have found out that when delegate uses shadow effect it crashes after model change. Simplified example is attached.
The example works following way. There are rectangles in repeater, if you click on any it is "selected". if you click outside it is deselected. The model changes every 3 seconds - increasing number of rectangles just for example. If you try to select and deselect after model change, application crashes. If you disable shadow effect or use Q5 compatibility module for shadow, it works.
| For Gerrit Dashboard: QTBUG-124730 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 557464,2 | Fix crash in MultiEffect with dynamic delegates | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 557607,2 | Fix crash in MultiEffect with dynamic delegates | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 557685,2 | Fix crash in MultiEffect with dynamic delegates | 6.7.1 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 557689,2 | Fix crash in MultiEffect with dynamic delegates | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | +1 |