Fix crash in MultiEffect with dynamic delegates

Changing dummy QQuickShaderEffectSource to be private variable rather
than static one fixes issue with dynamic delegates switching blurred
items on/off.

Fixes: QTBUG-124730
Change-Id: Ibaebfd6cb228fe1b7fa91c8219c1355a93ceb19c
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit 4375fff77441e11efc814a959950580d5b3645b5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 0fde572310ac0c834d8b04a85afa150e6223ae75)